--- a/assets/styles.css
+++ b/assets/styles.css
@@ -18,6 +18,7 @@ label>a{
     font-size:2.5rem;
     color: #DB0E0E;
     font-weight: bolder;
+    text-decoration: none;
 }
 .nav-link {
      /* background-color:red;  */
