--- a/assets/styles.css
+++ b/assets/styles.css
@@ -67,11 +67,11 @@ li{
         background-color:#628395 ;
         
         display: flex;
-        flex-direction: row;
+        /* flex-direction: row; */
         align-items:center;
-        justify-content: space-between;
+        /* justify-content: space-between;
         width: 85%;
-        margin: auto; 
+        margin: auto;  */
     }
      
     .image{
@@ -91,4 +91,17 @@ li{
     }
     #place{
         margin-top: 60%;
+    }
+    .About{
+        /* background-color: #DB0E0E; */
+        display: flex;
+        text-align: center;
+        font-size: 2.0rem;
+        margin-top: 60px;
+        margin-left: 200px;
+        font-weight: 600;
+    }
+    #info{
+        text-align: center;
+        font-size: 2.5rem;
     }
