--- a/assets/styles.css
+++ b/assets/styles.css
@@ -105,3 +105,36 @@ li{
         text-align: center;
         font-size: 2.5rem;
     }
+
+    .Random{
+        /* background-color: #DB0E0E; */
+        padding: 50px;
+        /* margin: auto; */
+        
+
+    }
+    #random{
+        text-align: center;
+        font-size: 2.5rem;
+    }
+    .container{
+        display: flex; 
+        justify-content: space-between;
+        
+    }
+    
+
+    .Random>button{
+       background-color: #DB0E0E; 
+       justify-content: center;
+       align-items: center; 
+       padding-bottom: 3rem;
+       width: 200px;
+       margin-top: 3rem;
+       margin-bottom: 3rem;
+       margin-left: 45rem;
+       border-radius: 10px;
+       padding: 10px;
+       color: #ffff;
+    
+    }
