style click button

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -138,7 +138,36 @@ li{
        color: #ffff;
     
     }
+    .click{
+        /* background-color: aqua; */
+        margin-left: 500px;
+        /* padding-left: 50px; */
+        display: grid;
+        
+    }
+
+    #viewjokes{
+        color: #ffff;
+        text-align: center;
+        font-weight: 600;
+        font-size: 2.5rem;
+        width: 20vw;
+        margin-left: 200px;
+        border-radius: 50px;
+        background-color: #DB0E0E;
+    }
+    #hand{
+    /* background-color: yellow; */
     
+    }
+    #in{
+        margin-top: 25px;
+        height: 10vh;
+        width: 85vh;
+        border: 1px solid grey;
+        background-color: #ffff;
+        box-shadow: 10px 15px 10px #aaaaaa;
+}
 
     
 
