--- a/assets/styles.css
+++ b/assets/styles.css
@@ -166,7 +166,54 @@ li{
         box-shadow: 10px 15px 10px #aaaaaa;
 }
 
+/* Reviews */
+.reviews{
+    width: 50%;
+    margin: auto;
+    height: 45vh;
+    height: auto;  
+   /* display: flex; 
+   flex-direction: column;  */
+    /* justify-content: space-around; */
+}
+
+reviews h1{
+    text-align: center;
+    font-size: 4rem;
+    margin-top: 40px;
+
+}
+.reviewContent p{
+    font-size: 1.3rem;
     
+}
+.column{
+    display: flex;
+    flex-direction: column;
+   justify-content: center;
+   text-align: center;
+   margin-top: 50px; 
+}
+
+/* .reviewMain{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+ } */
+
+ .reviewContent span{
+    font-size: 1.7rem;
+    margin-top: 20px;
+    color: #DB0E0E;
+}
+
+ /* .reviewContent span .checked{
+    color:#c7db0e;
+}  */
+
+
+     
 
 
       
