add style property

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -169,7 +169,7 @@ li{
         background-color: yellow;
         box-shadow: 20px 30px 15px #aaaaaa;
         font-size: xx-large;
-        font-weight: 600;
+        font-weight: bolder;
         color:purple;
         border-radius: 10px;
 }
