--- a/assets/styles.css
+++ b/assets/styles.css
@@ -190,6 +190,7 @@ li{
 }
 
 reviews h1{
+    
     text-align: center;
     font-size: 4rem;
     margin-top: 40px;
@@ -219,7 +220,10 @@ reviews h1{
     margin-top: 20px;
     color: #DB0E0E;
 }
-
+#feedback{
+    /* background-color: #DB0E0E; */
+    text-align: center;
+}
 
 
 /* Footer */
