--- a/assets/styles.css
+++ b/assets/styles.css
@@ -746,3 +746,98 @@ footer{
     color: green;
 }
 }
+
+   /* LAPTOP LARGE */
+   @media screen and (max-width:1585px){
+ 
+   nav{
+    
+        padding: 0;
+        margin: 0;
+        height: 5vh;
+        width: 600%;
+    }
+        
+        nav>button{
+            /* background-color: yellow; */
+            margin-right: 5rem; 
+            
+        }
+        .image{
+    /* background-color: #DB0E0E; */
+    
+    object-fit: fill;
+    max-width: 100%;
+    max-height: 100%;
+
+        }
+    .Homepage{
+        width: 700%;
+        display: flex;
+        align-items: center;
+        padding-left: 200%;
+    }
+    #aboutus{
+        width: 600%;
+        text-align: center;
+        /* background-color: #f37070; */
+    }
+    .About{
+        margin-left: 250%;
+        width: 600%;
+    } 
+    .humour{
+        width: 500px;
+        /* background-color: #f37070; */
+    }
+    .click{
+        /* background-color: #DB0E0E; */
+        width: 700%;
+        align-items: center;
+        margin:3% 280%;
+    }
+    #random{
+        width: 600%;
+        align-items: center;
+    }   
+    .Random{
+        /* background-color: #f37070; */
+        
+        width: 700%;
+        
+    }
+    
+    .container{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        object-fit: fill;
+        
+       
+    }
+    .container1{
+        margin: 0.8%;
+        display: block;
+    
+    }
+    #feedback{
+        width: 600%;
+        text-align: center;
+        font-size: 5rem;
+        margin-top: 100px;
+    
+    }
+        .reviewMain{
+            width: 600%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+         } 
+    footer{
+        width: 700%;
+    }
+    #cribe{
+        margin-right:90%;
+    }
+   }
