--- a/assets/styles.css
+++ b/assets/styles.css
@@ -565,6 +565,26 @@ background-color:#f37070;
 border: 2px solid;
 }
   /* RANDOM SECTION */
+  .container{
+   background-color: #f37070;
+
+}
+.Random{
+    background-color: indigo;
+}
+.btn{
+     background-color: #f37070;
+    
+    
+}
+.explorebtn{
+    background-color: transparent;
+    
+}
+#rj{
+     background-color: #f37070; 
+    
+}
 
 
 
@@ -728,7 +748,35 @@ footer{
         margin:3% 300%;
     }
      /* RANDOM SECTION */
-
+     .container{
+        background-color: #f37070;
+        margin-left: 0;
+        padding: 0;
+        
+     }
+     .Random{
+         background-color: indigo;
+         width: 800%;
+     }
+     .btn{
+          background-color: #e21515;
+          margin-left: 34%;
+          
+        
+         
+         
+     }
+     .explorebtn{
+         background-color: transparent;
+         
+     }
+     #rj{
+          background-color: #7088f3; 
+          width: 600%;
+          text-align: center;
+          font-size: 4rem;
+          margin-top: 100px
+     }
 
 
 
