--- a/assets/styles.css
+++ b/assets/styles.css
@@ -759,12 +759,46 @@ nav{
         padding: 0;
         margin: 0;
         height: 5vh;
-        width: 600%;
+        width: 700%;
 }
    }
+   @media screen and (max-width: 1280px) {
+
+    nav{
+        padding: 0;
+        margin: 0;
+        width: 700;
+    }
+    .Homepage{
+        width: 700;
+    }
+    .click{
+        /* background-color: #DB0E0E; */
+        width: 700;
+        
+    }
+    footer{
+        width: 700;
+    }
+.Random{
+    width: 800;
+}
+#feedback{
+    width: 700%;
+    text-align: center;
+    font-size: 5rem;
+    margin-top: 50px;
 
 
-
+}
+    .reviewMain{
+        width: 600%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+     } 
+   }
    /* LAPTOP LARGE */
    @media screen and (max-width:1585px){
  
